# wasm-rust-api

./: .gitmodules  Cargo.toml  cube.wasm  gcd.wasm
c-examples/: Makefile
examples/: gcd.rs
examples/wasmtime/: main.rs
src/: callable.rs  context.rs  externals.rs  instance.rs  lib.rs  module.rs  runtime.rs  trap.rs  types.rs  values.rs  wasm.rs
src/trampoline/: create_handle.rs  mod.rs
