[package]
name = "wasm-rust-api"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.36.0"
cranelift-native = "0.36.0"
cranelift-entity = "0.36.0"
cranelift-wasm = "0.36.0"
wasmtime-runtime = { path="../wasmtime/wasmtime-runtime" }
wasmtime-environ = { path="../wasmtime/wasmtime-environ" }
wasmtime-jit = { path="../wasmtime/wasmtime-jit" }
#wasmtime-runtime = { git="https://github.com/CraneStation/wasmtime/", rev="b7d86af" }
#wasmtime-environ = { git="https://github.com/CraneStation/wasmtime/", rev="b7d86af" }
#wasmtime-jit = { git="https://github.com/CraneStation/wasmtime/", rev="b7d86af" }
wasmparser = "0.34"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }

[patch.crates-io]
