[package]
name = "wasm-rust-api"
version = "0.1.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm_rust_api"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
cranelift-codegen = "0.38.0"
cranelift-native = "0.38.0"
cranelift-entity = "0.38.0"
cranelift-wasm = "0.38.0"
cranelift-frontend = "0.38.0"
wasmtime-runtime = { git="https://github.com/CraneStation/wasmtime/", rev="4937dd0" }
wasmtime-environ = { git="https://github.com/CraneStation/wasmtime/", rev="4937dd0" }
wasmtime-jit = { git="https://github.com/CraneStation/wasmtime/", rev="4937dd0" }
wasmparser = "0.35"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
target-lexicon = { version = "0.4.0", default-features = false }
region = "2.0.0"

[dev-dependencies]
# for wasmtime.rs
wasi-common = { git = "https://github.com/CraneStation/wasi-common", rev = "8ea7a98"}
docopt = "1.0.1"
serde = { "version" = "1.0.94", features = ["derive"] }
pretty_env_logger = "0.3.0"
wabt = "0.9.0"
wasmtime-wast = { git="https://github.com/CraneStation/wasmtime/", rev="4937dd0" }
wasmtime-wasi = { git="https://github.com/CraneStation/wasmtime/", rev="4937dd0" }
rayon = "1.1"
file-per-thread-logger = "0.1.1"

[patch.crates-io]
